<resources>
    <string name="ct_name" translatable="false">CtCustomize</string>

    <string name="ct_loading_text" translatable="false">加载中...</string>
    <string name="ct_stop_read">停止读取</string>
    <string name="ct_start_read">开始读取</string>
    <string name="ct_start_read_rfid">开始读取(RFID)</string>
    <string name="ct_read">读取</string>
    <string name="ct_stop_read_rfid">停止读取(RFID)</string>
    <string name="ct_start_scan">开始扫描</string>
    <string name="ct_scan">扫描</string>
    <string name="ct_power_setting">功率设置</string>
    <string name="ct_clean">取消</string>
    <string name="ct_confirm">确定</string>
    <string name="ct_delete">删除</string>
    <string name="ct_reset">重置</string>
    <string name="ct_review">审核</string>
    <string name="ct_promt">提示</string>
    <string name="ct_select">选择</string>
    <string name="ct_year">年</string>
    <string name="ct_month">月</string>
    <string name="ct_day">日</string>
    <string name="ct_hour">时</string>
    <string name="ct_minute">分</string>

    <!-- 加载控件  -->
    <string name="ct_load_all">已加载全部</string>
    <string name="ct_load_after_letting_go">松手后加载</string>
    <string name="ct_pull_up_loading">上拉加载</string>
    <string name="ct_is_loading">正在加载</string>
    <string name="ct_pull_down_to_refresh">下拉刷新</string>
    <string name="ct_refresh_after_letting_go">松手后刷新</string>
    <string name="ct_refreshing">正在刷新</string>
    <string name="ct_loadMore">加载更多</string>

    <string name="default_import_data">导入</string>

</resources>
