<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/ct_read_clean_power_Rl"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/ct_read_stop_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_506FAF"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/ct_stop_read_rfid"
        android:textColor="@color/color_ffffff"
        android:textSize="18sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/ct_read_button_fra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/color_49AAB9">

        <RelativeLayout
            android:id="@+id/ct_read_reset_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@drawable/ct_read_reset_btn"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ct_read_power_btn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="@drawable/ct_read_power_btn"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ct_read_power_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="10"
                    android:textColor="@color/color_ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:text="dBM"
                    android:textColor="@color/color_ffffff"
                    android:textSize="8sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/ct_read_reset_tv"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/ct_read_power_btn"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:textStyle="bold"
                android:text="@string/ct_reset"
                android:textColor="@color/color_ffffff"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/ct_read_start_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/ct_read_reset_rl"
            android:gravity="center"
            android:text="@string/ct_start_read_rfid"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp" />


    </RelativeLayout>

</RelativeLayout>