<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ic_stop_rl"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ic_scan_read_poser_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color_2F86FF"
            android:gravity="center"
            android:textColor="@color/color_ffffff"
            android:text="1\ndBM"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/ic_stop_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@color/color_F1465B"
            android:gravity="center"
            android:text="@string/ct_stop_read_rfid"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ic_scan_read_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_FD7557"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ic_reset_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:scaleType="center"
                android:src="@mipmap/reset_ig" />

            <View
                android:id="@+id/ic_reset_view"
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:background="@color/color_ffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/ic_scan_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/ct_scan"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ic_read_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <View
                android:layout_width="2px"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent"
                android:background="@color/color_ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ct_read"
                android:textColor="@color/color_ffffff"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>