<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_power_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ct_clean"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_power_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ct_power_setting"
            android:textColor="@color/color_000000"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/setting_power_dialog_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ct_confirm"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/bx_power_s"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="1dBM"
            android:textColor="@color/color_000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting_power_dialog_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="15"
                android:textColor="@color/color_000000"
                android:textSize="16sp" />

            <cat.customize.view.CtSeekBar
                android:id="@+id/setting_power_dialog_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:progress_max="30" />
        </LinearLayout>


        <TextView
            android:id="@+id/setting_power_dialog_max_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/bx_power_l"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="30dBM"
            android:textColor="@color/color_000000"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>